force-app/main/default/objects/PureCloud_Call_Service__c/PureCloud_Call_Service__c.object-meta.xml
<CustomObject>
    <label>PureCloud-Call Service</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PureCloud-Call Service</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>