force-app/main/default/objects/PureCloud_Call_Service__c/fields/Abandon_Count_20_Sec__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Count_20_Sec__c</fullName>
    <label>Abandon  &lt;= 20 Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>