force-app/main/default/objects/PureCloud_Call_Service__c/fields/Abandon_Count_5_Sec_High__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Count_5_Sec_High__c</fullName>
    <label>Abandon &gt; 5 Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>