force-app/main/default/objects/PureCloud_Call_Service__c/fields/Abandon_Count__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Count__c</fullName>
    <label>Abandon Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>