force-app/main/default/objects/PureCloud_Call_Service__c/fields/Abandon_Sum__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Sum__c</fullName>
    <inlineHelpText>tAbandon : Sum</inlineHelpText>
    <label>Abandon Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>