force-app/main/default/objects/PureCloud_Call_Service__c/fields/ACD_Count_30_Sec__c.field-meta.xml
<CustomField>
    <fullName>ACD_Count_30_Sec__c</fullName>
    <label>ACD &lt; 30 Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>