force-app/main/default/objects/PureCloud_Call_Service__c/fields/ACD_Count__c.field-meta.xml
<CustomField>
    <fullName>ACD_Count__c</fullName>
    <label>ACD Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>