force-app/main/default/objects/PureCloud_Call_Service__c/fields/ACD_Sum__c.field-meta.xml
<CustomField>
    <fullName>ACD_Sum__c</fullName>
    <inlineHelpText>tTalk : Sum</inlineHelpText>
    <label>ACD Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>