force-app/main/default/objects/PureCloud_Call_Service__c/fields/ACW_Count__c.field-meta.xml
<CustomField>
    <fullName>ACW_Count__c</fullName>
    <inlineHelpText>tACW : Count</inlineHelpText>
    <label>ACW Time Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>