force-app/main/default/objects/PureCloud_Call_Service__c/fields/ACW_Sum__c.field-meta.xml
<CustomField>
    <fullName>ACW_Sum__c</fullName>
    <inlineHelpText>tACW : Sum</inlineHelpText>
    <label>ACW Time Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>