force-app/main/default/objects/PureCloud_Call_Service__c/fields/Ans_Calls__c.field-meta.xml
<CustomField>
    <fullName>Ans_Calls__c</fullName>
    <formula>ACD_Count__c /  Call_Offered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ans Calls %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>