force-app/main/default/objects/PureCloud_Call_Service__c/fields/Avg_Abandon__c.field-meta.xml
<CustomField>
    <fullName>Avg_Abandon__c</fullName>
    <formula>Abandon_Sum__c / Abandon_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Abandon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>