force-app/main/default/objects/PureCloud_Call_Service__c/fields/AVG_ACD__c.field-meta.xml
<CustomField>
    <fullName>AVG_ACD__c</fullName>
    <formula>ACD_Sum__c / ACD_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG ACD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>