force-app/main/default/objects/PureCloud_Call_Service__c/fields/AVG_ACW__c.field-meta.xml
<CustomField>
    <fullName>AVG_ACW__c</fullName>
    <formula>ACW_Sum__c /  ACW_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG ACW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>