force-app/main/default/objects/PureCloud_Call_Service__c/fields/AVG_Hold__c.field-meta.xml
<CustomField>
    <fullName>AVG_Hold__c</fullName>
    <formula>Hold_Sum__c / ACD_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>