force-app/main/default/objects/PureCloud_Call_Service__c/fields/Avg_Speed_of_Answer__c.field-meta.xml
<CustomField>
    <fullName>Avg_Speed_of_Answer__c</fullName>
    <formula>Calls_Answered_Sum__c /  ACD_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>tAnswered : Sum / Count</inlineHelpText>
    <label>Avg Speed of Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>