force-app/main/default/objects/PureCloud_Call_Service__c/fields/Avg_Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Avg_Talk_Time__c</fullName>
    <formula>Talk_Sum__c / Talk_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>tTalk: Sum/Count</inlineHelpText>
    <label>Avg Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>