force-app/main/default/objects/PureCloud_Call_Service__c/fields/Calls_Answered_Sum__c.field-meta.xml
<CustomField>
    <fullName>Calls_Answered_Sum__c</fullName>
    <inlineHelpText>tAnswered : Sum</inlineHelpText>
    <label>Calls Answered Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>