force-app/main/default/objects/PureCloud_Call_Service__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>QueueId+Interval(08:00-08.30)+Tanggal(YYYY-MM-DD)
example : &quot;Queueid-08.00-08.30-2018-1-18&quot;</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>