force-app/main/default/objects/PureCloud_Call_Service__c/fields/Extn_Out_Calls__c.field-meta.xml
<CustomField>
    <fullName>Extn_Out_Calls__c</fullName>
    <label>Extn Out Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>