force-app/main/default/objects/PureCloud_Call_Service__c/fields/FlowOut_Count__c.field-meta.xml
<CustomField>
    <fullName>FlowOut_Count__c</fullName>
    <label>Flow Out (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>