force-app/main/default/objects/PureCloud_Call_Service__c/fields/Handle_Sum__c.field-meta.xml
<CustomField>
    <fullName>Handle_Sum__c</fullName>
    <label>Handle Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>