force-app/main/default/objects/PureCloud_Call_Service__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00:00-00:30</fullName>
            </value>
            <value>
                <fullName>00:30-01:00</fullName>
            </value>
            <value>
                <fullName>01:00-01:30</fullName>
            </value>
            <value>
                <fullName>01:30-02:00</fullName>
            </value>
            <value>
                <fullName>02:00-02:30</fullName>
            </value>
            <value>
                <fullName>02:30-03:00</fullName>
            </value>
            <value>
                <fullName>03:00-03:30</fullName>
            </value>
            <value>
                <fullName>03:30-04:00</fullName>
            </value>
            <value>
                <fullName>04:00-04:30</fullName>
            </value>
            <value>
                <fullName>04:30-05:00</fullName>
            </value>
            <value>
                <fullName>05:00-05:30</fullName>
            </value>
            <value>
                <fullName>05:30-06:00</fullName>
            </value>
            <value>
                <fullName>06:00-06:30</fullName>
            </value>
            <value>
                <fullName>06:30-07:00</fullName>
            </value>
            <value>
                <fullName>07:00-07:30</fullName>
            </value>
            <value>
                <fullName>07:30-08:00</fullName>
            </value>
            <value>
                <fullName>08:00-08:30</fullName>
            </value>
            <value>
                <fullName>08:30-09:00</fullName>
            </value>
            <value>
                <fullName>09:00-09:30</fullName>
            </value>
            <value>
                <fullName>09:30-10:00</fullName>
            </value>
            <value>
                <fullName>10:00-10:30</fullName>
            </value>
            <value>
                <fullName>10:30-11:00</fullName>
            </value>
            <value>
                <fullName>11:00-11:30</fullName>
            </value>
            <value>
                <fullName>11:30-12:00</fullName>
            </value>
            <value>
                <fullName>12:00-12:30</fullName>
            </value>
            <value>
                <fullName>12:30-13:00</fullName>
            </value>
            <value>
                <fullName>13:00-13:30</fullName>
            </value>
            <value>
                <fullName>13:30-14:00</fullName>
            </value>
            <value>
                <fullName>14:00-14:30</fullName>
            </value>
            <value>
                <fullName>14:30-15:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>