force-app/main/default/objects/PureCloud_Call_Service__c/fields/Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Call__c</fullName>
    <label>Outbound Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>