force-app/main/default/objects/PureCloud_Call_Service__c/fields/queueId__c.field-meta.xml
<CustomField>
    <fullName>queueId__c</fullName>
    <label>queueId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>