force-app/main/default/objects/PureCloud_Call_Service__c/fields/SL_80_30__c.field-meta.xml
<CustomField>
    <fullName>SL_80_30__c</fullName>
    <formula>IF (Call_Offered__c == 0, 0, ACD_Count_30_Sec__c /  Call_Offered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SL (%)80/30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>