force-app/main/default/objects/PureCloud_Call_Service__c/fields/Transferred_Out__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Out__c</fullName>
    <label>Transferred Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>